added rbase build->libs

--- a/project.conf
+++ b/project.conf
@@ -1,4 +1,3 @@
-
 [details]
 name=sys-update
 version=0.1
@@ -9,3 +8,4 @@ author=Pratyush Ratan <ratan.pratyush@gmail.com>
 
 [build]
 lang=cc
+libs=rbase
